Reduced file size for thumbnails images
Reduced file size for thumbnails images

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -192,7 +192,7 @@
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsInflo">Inflo</a></div>
               <div class="cardSubTitle">Get to Know your County</div>
             </div>
-            <div><img class="cardImage" src="images/inflo.png" alt="Inflo Screenshot" data-toggle="modal" data-target="#modalDetailsInflo"/></div>
+            <div><img class="cardImage" src="images/inflo_small.png" alt="Inflo Screenshot" data-toggle="modal" data-target="#modalDetailsInflo"/></div>
            	<div class="cardContent">
               <div class="cardCatagory">Providing users with a visualization of county statistics as they pertain to environmental, demographic and natural hazard factors.</div>
               <img class="capabilityIcons" src="images/mongoIcon.png" data-toggle="tooltip" data-placement="top" title="MongoDB" alt="MongoDB"/><img class="capabilityIcons" src="images/expressIcon.png" data-toggle="tooltip" data-placement="top" title="Express" alt="Express"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/rubyIcon.png" data-toggle="tooltip" data-placement="top" title="Ruby on Rails" alt="Ruby on Rails"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
@@ -210,7 +210,7 @@
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsMEDCheck">MEDCheck</a></div>
               <div class="cardSubTitle">Know the Side Effects of Medications</div>
             </div>
-            <div><img class="cardImage" src="images/medcheck-thumb.png" alt="Inflo Screenshot" data-toggle="modal" data-target="#modalDetailsMEDCheck"/></div>
+            <div><img class="cardImage" src="images/medcheck-thumb_small.png" alt="Inflo Screenshot" data-toggle="modal" data-target="#modalDetailsMEDCheck"/></div>
            	<div class="cardContent">
               <div class="cardCatagory">Providing users with an optimal way to view the side effects of the medication(s) they use.</div>
               <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
@@ -228,7 +228,7 @@
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsRefusalCheck">RefusalCheck</a></div>
               <div class="cardSubTitle">Rapidly check for food and drug refusals</div>
             </div>
-            <div><img class="cardImage" src="images/refusalCheck-thumb.png" alt="Inflo Screenshot" data-toggle="modal" data-target="#modalDetailsRefusalCheck"/></div>
+            <div><img class="cardImage" src="images/refusalCheck-thumb_small.png" alt="Inflo Screenshot" data-toggle="modal" data-target="#modalDetailsRefusalCheck"/></div>
            	<div class="cardContent">
               <div class="cardCatagory">Providing consumers with quick access to global food and drug refusals.</div>
               <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
@@ -246,7 +246,7 @@
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsLumify">Lumify</a></div>
               <div class="cardSubTitle">Data + Perspective</div>
             </div>
-            <div><img class="cardImage" src="images/Lumify-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsLumify"/></div>
+            <div><img class="cardImage" src="images/Lumify-thumb_small.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsLumify"/></div>
            	<div class="cardContent">
               <div class="cardCatagory">Providing users with a platform to visualize big and unstructured data using open sources technologies.</div>
               <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
@@ -282,7 +282,7 @@
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsLiveSafe">LiveSafe</a></div>
               <div class="cardSubTitle">Move Smarter.</div>
             </div>
-            <div><img class="cardImage" src="images/LiveSafe-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsLiveSafe"/></div>
+            <div><img class="cardImage" src="images/LiveSafe-thumb_small.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsLiveSafe"/></div>
            	<div class="cardContent">
               <div class="cardCatagory">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nibh porttitor, accumsan purus.</div>
               <img class="capabilityIcons" src="images/mongoIcon.png" data-toggle="tooltip" data-placement="top" title="MongoDB" alt="MongoDB"/><img class="capabilityIcons" src="images/expressIcon.png" data-toggle="tooltip" data-placement="top" title="Express" alt="Express"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/rubyIcon.png" data-toggle="tooltip" data-placement="top" title="Ruby on Rails" alt="Ruby on Rails"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
