LiveSafe Details Update
Updated details and modal for LiveSafe.

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -284,7 +284,7 @@
             </div>
             <div><img class="cardImage" src="images/LiveSafe-thumb_small.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsLiveSafe"/></div>
            	<div class="cardContent">
-              <div class="cardCatagory">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nibh porttitor, accumsan purus.</div>
+              <div class="cardCatagory">Explore and compare counties to help decide where to move.</div>
               <img class="capabilityIcons" src="images/mongoIcon.png" data-toggle="tooltip" data-placement="top" title="MongoDB" alt="MongoDB"/><img class="capabilityIcons" src="images/expressIcon.png" data-toggle="tooltip" data-placement="top" title="Express" alt="Express"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/rubyIcon.png" data-toggle="tooltip" data-placement="top" title="Ruby on Rails" alt="Ruby on Rails"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
            	</div>
             <div class="cardFooter">
@@ -464,11 +464,11 @@
             <div class="col-md-6 modalLeft">
               <div class="modalTitle">LiveSafe</div>
               <div class="modalHeading">The Problem:</div>
-              <div class="modalText">Volumes of structured, unstructured, and semi-structured data at scale and at velocity, provide ingestion and dissemination challenges. This complicates efforts to analyze and graph relationships to analyze links.</div>
+              <div class="modalText">The average consumer needs quantifiable metrics and recommendations to decide where to move.</div>
               <div class="modalHeading">The Solution:</div>
-              <div class="modalText">Users can analyze relationships and automatically discovers paths between entities, and establishes new links.</div>
+              <div class="modalText">A tool that compares two counties using socio-economic, county quality and environmental metrics and provides recommendations on where to move.</div>
               <div class="modalHeading">The Benefits:</div>
-              <div class="modalText">Users can ingest structured, unstructured, and semi-structured data from any source (including audio, image and video files), and can plot relationships either in a graph format or on a geospatial map.</div>
+              <div class="modalText">A tool that provides a unified view of all pertinent socio-economic, county quality and environmental information along with recommendations on where to move. Also the ability to compare two distinct counties.</div>
             </div>
             <div class="col-md-6 modalRight">
               <div class="appShowcaseImg"><img src="images/LiveSafeDetails.png" alt="Screenshots of LifeSafe Application"/></div>
