--- a/fullscreen.html
+++ b/fullscreen.html
@@ -190,11 +190,11 @@
           <div class="card">
           	<div class="cardContent">
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsInflo">Inflo</a></div>
-              <div class="cardSubTitle">Get to Know your County</div>
+              <div class="cardSubTitle">Get to Know Your Neighborhood</div>
             </div>
             <div><img class="cardImage" src="images/inflo_small.png" alt="Inflo Screenshot" data-toggle="modal" data-target="#modalDetailsInflo"/></div>
            	<div class="cardContent">
-              <div class="cardCatagory">Providing users with a visualization of county statistics as they pertain to environmental, demographic and natural hazard factors.</div>
+              <div class="cardCatagory">A view of neighborhood demographic, environmental and hazard information.</div>
               <img class="capabilityIcons" src="images/mongoIcon.png" data-toggle="tooltip" data-placement="top" title="MongoDB" alt="MongoDB"/><img class="capabilityIcons" src="images/expressIcon.png" data-toggle="tooltip" data-placement="top" title="Express" alt="Express"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/rubyIcon.png" data-toggle="tooltip" data-placement="top" title="Ruby on Rails" alt="Ruby on Rails"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
            	</div>
             <div class="cardFooter">
@@ -208,11 +208,11 @@
           <div class="card">
             <div class="cardContent">
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsMEDCheck">MEDCheck</a></div>
-              <div class="cardSubTitle">Know the Side Effects of Medications</div>
+              <div class="cardSubTitle">Check Once. Choose Once.</div>
             </div>
             <div><img class="cardImage" src="images/medcheck-thumb_small.png" alt="Inflo Screenshot" data-toggle="modal" data-target="#modalDetailsMEDCheck"/></div>
            	<div class="cardContent">
-              <div class="cardCatagory">Providing users with an optimal way to view the side effects of the medication(s) they use.</div>
+              <div class="cardCatagory">An optimal way to view prescription side effects</div>
               <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
            	</div>
             <div class="cardFooter">
@@ -244,11 +244,11 @@
           <div class="card">
             <div class="cardContent">
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsLumify">Lumify</a></div>
-              <div class="cardSubTitle">Data + Perspective</div>
+              <div class="cardSubTitle">Bringing Perspective to Unstructured Data</div>
             </div>
             <div><img class="cardImage" src="images/Lumify-thumb_small.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsLumify"/></div>
            	<div class="cardContent">
-              <div class="cardCatagory">Providing users with a platform to visualize big and unstructured data using open sources technologies.</div>
+              <div class="cardCatagory">A platform to visualize unstructured data</div>
               <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
            	</div>
             <div class="cardFooter">
@@ -267,7 +267,7 @@
             <div><img class="cardImage" src="images/placeholder-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsMashup"/></div>
            	<div class="cardContent">
               <div class="cardCatagory">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nibh porttitor, accumsan purus.</div>
-              <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
+              <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/><img class="capabilityIcons" src="images/birtIcon.png" data-toggle="tooltip" data-placement="top" title="BIRT" alt="BIRT"/><img class="capabilityIcons" src="images/mysql.png" data-toggle="tooltip" data-placement="top" title="mysql" alt="mysql"/>
            	</div>
             <div class="cardFooter">
               <div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><button class="cardButton" data-toggle="modal" data-target="#modalDetailsMashup">READ MORE</button>
@@ -280,12 +280,12 @@
           <div class="card">
             <div class="cardContent">
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsLiveSafe">LiveSafe</a></div>
-              <div class="cardSubTitle">Move Smarter.</div>
+              <div class="cardSubTitle">Move Smarter</div>
             </div>
             <div><img class="cardImage" src="images/LiveSafe-thumb_small.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsLiveSafe"/></div>
            	<div class="cardContent">
               <div class="cardCatagory">Explore and compare counties to help decide where to move.</div>
-              <img class="capabilityIcons" src="images/mongoIcon.png" data-toggle="tooltip" data-placement="top" title="MongoDB" alt="MongoDB"/><img class="capabilityIcons" src="images/expressIcon.png" data-toggle="tooltip" data-placement="top" title="Express" alt="Express"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/rubyIcon.png" data-toggle="tooltip" data-placement="top" title="Ruby on Rails" alt="Ruby on Rails"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
+              <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/mongoIcon.png" data-toggle="tooltip" data-placement="top" title="MongoDB" alt="MongoDB"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
            	</div>
             <div class="cardFooter">
               <div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><button class="cardButton" data-toggle="modal" data-target="#modalDetailsLiveSafe">READ MORE</button>
@@ -322,11 +322,11 @@
             <div class="col-md-6 modalLeft">
               <div class="modalTitle">Inflo</div>
               <div class="modalHeading">The Problem:</div>
-              <div class="modalText">Users do not have a centralized mechanism to research and view county statistics in order to make informed decisions.</div>
+              <div class="modalText">Users do not have a unified dashboard view of neighborhood demographic, environmental and hazard information.</div>
               <div class="modalHeading">The Solution:</div>
-              <div class="modalText">Users should be able to view, slice and dice a centralized dashboard that aggregates statistical information from multiple county repositories.</div>
+              <div class="modalText">A solution that aggregates neighborhood related demographic, environmental and hazard information from multiple applicable sources.</div>
               <div class="modalHeading">The Benefits:</div>
-              <div class="modalText">Users can make informed decisions regarding counties based on a dashboard that aggregates data from multiple environmental, demographic and natural hazard information repositories.</div>
+              <div class="modalText">A unified dashboard of neighborhood related information and statistics.</div>
             </div>
             <div class="col-md-6 modalRight">
               <div class="appShowcaseImg"><img src="images/infloDetails.png" alt="Screenshots of Inflo Application"/></div>
@@ -356,7 +356,7 @@
               <div class="modalHeading">The Solution:</div>
               <div class="modalText">Consumers should have an easy way to research prescription medications to see the side effects, reported adverse reactions, and any recalls.</div>
               <div class="modalHeading">The Benefits:</div>
-              <div class="modalText">Consumer should be able to go to a single web site to research safety information of prescription medications and make informed choices on which prescription medication to choose based on history of adverse effects, label warnings, and recalls.</div>
+              <div class="modalText">A solution that enables the average consumer to visit a portal to view medicinal information, their side effects and make informed decisions.</div>
             </div>
             <div class="col-md-6 modalRight">
               <div class="appShowcaseImg"><img src="images/MEDCheckDetails.png" alt="Screenshots of MEDCheck Application"/></div>
@@ -408,9 +408,9 @@
             <div class="col-md-6 modalLeft">
               <div class="modalTitle">Lumify</div>
               <div class="modalHeading">The Problem:</div>
-              <div class="modalText">Volumes of structured, unstructured, and semi-structured data at scale and at velocity, provide ingestion and dissemination challenges. This complicates efforts to analyze and graph relationships to analyze links.</div>
+              <div class="modalText">Volumes of data (structured and unstructured) account for ingestion and dissemination challenges. There is a need for organization of data in order to gauge for accurate decision-making, insights and perspectives.</div>
               <div class="modalHeading">The Solution:</div>
-              <div class="modalText">Users can analyze relationships and automatically discovers paths between entities, and establishes new links.</div>
+              <div class="modalText">A solution that identifies disparate data types, identifies relationships and discovers patterns for trend analysis.</div>
               <div class="modalHeading">The Benefits:</div>
               <div class="modalText">Users can ingest structured, unstructured, and semi-structured data from any source (including audio, image and video files), and can plot relationships either in a graph format or on a geospatial map.</div>
             </div>
@@ -493,7 +493,7 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <div id="modalLeft" class="col-md-12">
               <div class="modalTitle">About</div>
-              <div class="modalText">Technology is changing at an unprecedented rate around us, and this shift is leading to the creation of new challenges and innovations in the public sector. OLabs was born from the idea that efficiency is the new innovation and that technology can be used to challenge the status quo, creating new ways of solving business problems.</br></br>We combine the principles of design thinking with lean startup methodology to ensure the solutions we create are user focused and aligned with solving business problems. This user-centric obsession, combined with our fail fast/fail forward Agile approach, enables us to ideate, prototype, and create solutions rapidly. Meanwhile, we validate our solutions with customer feedback. The days of “blank checks” in government IT are over, and we are delivering solutions that help the government be more Agile and efficient in this new normal of budget uncertainty.</div>
+              <div class="modalText">We are a digital workforce that pride ourselves in designing and building tools and solutions that cater to the general public. We use a strong mix of technologies (Open Source when possible) and practices (like Dev Ops, Agile and Lean UX) to craft solutions that meet our customer’s needs and are easy to use.</br></br>For more information on our overall corporate capabilities, please visit: <a href="www.octoconsulting.com">www.octoconsulting.com</a></br></br>For more information on our incubation and innovation lab projects, please visit:</br></br><a href="labs.octoconsulting.com">labs.octoconsulting.com</a></div>
             </div>
   	      </div>
         </div>
