--- a/fullscreen.html
+++ b/fullscreen.html
@@ -208,7 +208,7 @@
           <div class="card">
             <div class="cardContent">
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsMEDCheck">MEDCheck</a></div>
-              <div class="cardSubTitle">Check Once. Choose Once.</div>
+              <div class="cardSubTitle">Know More About Medicinal Side Effects</div>
             </div>
             <div><img class="cardImage" src="images/medcheck-thumb_small.png" alt="Inflo Screenshot" data-toggle="modal" data-target="#modalDetailsMEDCheck"/></div>
            	<div class="cardContent">
@@ -261,12 +261,12 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsMashup">Mashup App</a></div>
-              <div class="cardSubTitle">Sub Title</div>
+              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsMashup">Mashup</a></div>
+              <div class="cardSubTitle">Analyze for Data Center Usage Efficiency</div>
             </div>
             <div><img class="cardImage" src="images/placeholder-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsMashup"/></div>
            	<div class="cardContent">
-              <div class="cardCatagory">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nibh porttitor, accumsan purus.</div>
+              <div class="cardCatagory">A dashboard that outlines data center usage costs and provides comparisons across data centers.</div>
               <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/><img class="capabilityIcons" src="images/birtIcon.png" data-toggle="tooltip" data-placement="top" title="BIRT" alt="BIRT"/><img class="capabilityIcons" src="images/mysql.png" data-toggle="tooltip" data-placement="top" title="mysql" alt="mysql"/>
            	</div>
             <div class="cardFooter">
@@ -436,11 +436,11 @@
             <div class="col-md-6 modalLeft">
               <div class="modalTitle">Mashup</div>
               <div class="modalHeading">The Problem:</div>
-              <div class="modalText">Volumes of structured, unstructured, and semi-structured data at scale and at velocity, provide ingestion and dissemination challenges. This complicates efforts to analyze and graph relationships to analyze links.</div>
+              <div class="modalText">Government stakeholders currently use manual techniques to gather, analyze and report on data center operational costs that result in significant level of effort and delays. </div>
               <div class="modalHeading">The Solution:</div>
-              <div class="modalText">Users can analyze relationships and automatically discovers paths between entities, and establishes new links.</div>
+              <div class="modalText">A tool that extracts operational data from all data centers and reports on specific data center performance, allows for data center cost comparisons with other data centers and generates an automated report on a periodic basis that outlines energy and operational cost savings.</div>
               <div class="modalHeading">The Benefits:</div>
-              <div class="modalText">Users can ingest structured, unstructured, and semi-structured data from any source (including audio, image and video files), and can plot relationships either in a graph format or on a geospatial map.</div>
+              <div class="modalText">A unified dashboard that automates the collection, analysis, dissemination and reporting of data center operational costs and energy savings.</div>
             </div>
             <div class="col-md-6 modalRight">
               <div class="appShowcaseImg"><img src="images/LumifyDetails.png" alt="Screenshots of Mashup Application"/></div>
@@ -448,6 +448,8 @@
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="AngularJS"><img src="images/angularjs-logo.png" alt="AngularJS"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png"  alt="NodeJS"/></div>
 			  <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Amazon Web Services"><img src="images/amazonIcon.png"  alt="Amazon Web Services"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="birt"><img src="images/birtIcon.png"  alt="birt"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="mysql"><img src="images/mysql.png"  alt="mysql"/></div>
             </div>
             <!--<a href="http://apps.octoconsulting.com/inflo/#/" target="_blank" class="modalButton" type="submit">VISIT SITE</a>-->
   	      </div>
@@ -472,11 +474,10 @@
             </div>
             <div class="col-md-6 modalRight">
               <div class="appShowcaseImg"><img src="images/LiveSafeDetails.png" alt="Screenshots of LifeSafe Application"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Loopback"><img src="images/loopbackIcon.png" alt="Loopback Logo"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="MongoDB"><img src="images/mongoIcon.png" alt="MongoDB Logo"/></div>
-              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="ExpressJS"><img src="images/expressIcon.png" alt="ExpressJS Logo"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="AngularJS"><img src="images/angularjs-logo.png" alt="Angular Logo"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png" alt="NodeJS Logo"/></div>
-              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Ruby on Rails"><img src="images/rubyIcon.png" alt="Ruby Logo"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Amazon Web Services"><img src="images/amazonIcon.png" alt="Amazon Logo"/></div>
             </div>
             <a href="http://livesafe.octoconsulting.com/#/" target="_blank" class="modalButton" type="submit">VISIT SITE</a>
