--- a/fullscreen.html
+++ b/fullscreen.html
@@ -264,7 +264,7 @@
               <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsMashup">Mashup</a></div>
               <div class="cardSubTitle">Analyze for Data Center Usage Efficiency</div>
             </div>
-            <div><img class="cardImage" src="images/placeholder-thumb.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsMashup"/></div>
+            <div><img class="cardImage" src="images/Mashup-thumb_small.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsMashup"/></div>
            	<div class="cardContent">
               <div class="cardCatagory">A dashboard that outlines data center usage costs and provides comparisons across data centers.</div>
               <img class="capabilityIcons" src="images/loopbackIcon.png" data-toggle="tooltip" data-placement="top" title="Loopback" alt="Loopback"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/nodeIcon.png" data-toggle="tooltip" data-placement="top" title="NodeJS" alt="NodeJS"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/><img class="capabilityIcons" src="images/birtIcon.png" data-toggle="tooltip" data-placement="top" title="BIRT" alt="BIRT"/><img class="capabilityIcons" src="images/mysql.png" data-toggle="tooltip" data-placement="top" title="mysql" alt="mysql"/>
@@ -443,7 +443,7 @@
               <div class="modalText">A unified dashboard that automates the collection, analysis, dissemination and reporting of data center operational costs and energy savings.</div>
             </div>
             <div class="col-md-6 modalRight">
-              <div class="appShowcaseImg"><img src="images/LumifyDetails.png" alt="Screenshots of Mashup Application"/></div>
+              <div class="appShowcaseImg"><img src="images/MashupDetails.png" alt="Screenshots of Mashup Application"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Loopback"><img src="images/loopbackIcon.png" alt="Loopback"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="AngularJS"><img src="images/angularjs-logo.png" alt="AngularJS"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png"  alt="NodeJS"/></div>
@@ -508,7 +508,7 @@
           <div class="row modalRow" style="padding:20px">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <div id="modalLeft" class="col-md-12">
-              <div class="modalTitle">About</div>
+              <div class="modalTitle">Contact</div>
               <div class="modalHeading">Email:</div>
               <div class="modalText"><a href="mailto:Info@octoconsulting.com">info@octoconsulting.com</a></div>
               <div class="modalHeading">Phone:</div>
