Added Link to Refusal Check
Added link to refusal check

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -393,7 +393,7 @@
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png"  alt="NodeJS"/></div>
 			  <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Amazon Web Services"><img src="images/amazonIcon.png"  alt="Amazon Web Services"/></div>
             </div>
-            <!--<a href="http://apps.octoconsulting.com/inflo/#/" target="_blank" class="modalButton" type="submit">VISIT SITE</a>-->
+            <a href="http://refusalcheck.elasticbeanstalk.com/#/" target="_blank" class="modalButton" type="submit">VISIT SITE</a>
   	      </div>
         </div>
  	  </div>
