Mashup Add Visit Site
Added Visit Site to Mashup App

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -451,7 +451,7 @@
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="birt"><img src="images/birtIcon.png"  alt="birt"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="mysql"><img src="images/mysql.png"  alt="mysql"/></div>
             </div>
-            <!--<a href="http://apps.octoconsulting.com/inflo/#/" target="_blank" class="modalButton" type="submit">VISIT SITE</a>-->
+            <a href="http://mashup.octoconsulting.com/#/login" target="_blank" class="modalButton" type="submit">VISIT SITE</a>
   	      </div>
         </div>
  	  </div>
