--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="NodeJS"><img src="images/nodeIcon.png"  alt="NodeJS"/></div>
 			  <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Amazon Web Services"><img src="images/amazonIcon.png"  alt="Amazon Web Services"/></div>
             </div>
-            <a href="http://ec2-52-0-126-175.compute-1.amazonaws.com/index.html#/" target="_blank" class="modalButton" type="submit">VISIT SITE</a>
+            <a href="http://medcheck.octoconsulting.com/" target="_blank" class="modalButton" type="submit">VISIT SITE</a>
   	      </div>
         </div>
  	  </div>
