--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
               <div class="cardCatagory">Octo's Approach to User Experience Design (UXD)</div>
            	</div>
             <div class="cardFooter">
-              <div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><button class="cardButton" data-toggle="modal" data-target="#modalDetailsSS">DOWNLOAD</button>
+              <div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><a href="whitepapers/UXD White Paper - Octo Consulting Group-U-FOUO Final.pdf" target="new" class="cardButton">DOWNLOAD</button>
             </div>
           </div>
           <!--Card End-->
