--- a/index.html
+++ b/index.html
@@ -592,10 +592,10 @@
             </div>
             <div class="col-md-6 modalRight">
               <div class="appShowcaseImg"><img src="images/FPDSDetails.png" alt="Screenshots of LifeSafe Application"/></div>
-              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Intelliun VE"><img src="images/intelliunIcon.png" alt="Intelliun VE Logo"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="hadoop"><img src="images/hadoop-icon.png" alt="hadoop Logo"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="jquery"><img src="images/jqueryIcon.png" alt="jquery Logo"/></div>
-              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="java"><img src="images/javaIcon.png" alt="java Logo"/></div>
-              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="SQL"><img src="images/mysql.png" alt="SQL Logo"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="AngularJS"><img src="images/angularjs-logo.png" alt="angularJS Logo"/></div>
+              <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="docker"><img src="images/docker-icon.png" alt="docker Logo"/></div>
               <div class="modalTechIcon" data-toggle="tooltip" data-placement="top" title="Amazon Web Services"><img src="images/amazonIcon.png" alt="Amazon Logo"/></div>
             </div>
             <a href="http://fpds.octoconsulting.com/#/" target="_blank" class="modalButton" type="submit">VISIT SITE</a>
