--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalDetailsSS">UX Design Whitepaper</a></div>
+              <div class="cardTitle" ><a href="whitepapers/UXD White Paper - Octo Consulting Group-U-FOUO Final.pdf" target="new" >UX Design Whitepaper</a></div>
               <div class="cardSubTitle">User Experience Design</div>
             </div>
             <div><img class="cardImage" src="images/ux-design-wp-icon.png" alt="Screenshot" data-toggle="modal" data-target="#modalDetailsUXwp"/></div>
@@ -353,7 +353,7 @@
               <div class="cardCatagory">Octo's Approach to User Experience Design (UXD)</div>
            	</div>
             <div class="cardFooter">
-              <div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><a href="whitepapers/UXD White Paper - Octo Consulting Group-U-FOUO Final.pdf" target="new" class="cardButton">DOWNLOAD</button>
+              <div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><a href="whitepapers/UXD White Paper - Octo Consulting Group-U-FOUO Final.pdf" target="new" class="cardButton">DOWNLOAD</a>
             </div>
           </div>
           <!--Card End-->
