--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
           </div>
           <!--Card End-->
           </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 microservices big-data applications" id="card">
           <!--Card-->
           <div class="card">
             <div class="cardContent">
@@ -340,6 +341,7 @@
           </div>
           <!--Card End-->
           </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 intelligence-community whitepapers" id="card">
           <!--Card-->
           <div class="card">
             <div class="cardContent">
