Static site update
fixed link to correct modal

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               <img class="capabilityIcons" src="images/hadoop-icon.png" data-toggle="tooltip" data-placement="top" title="hadoop" alt="hadoop"/><img class="capabilityIcons" src="images/jqueryIcon.png" data-toggle="tooltip" data-placement="top" title="jquery" alt="jquery"/><img class="capabilityIcons" src="images/angularjs-logo.png" data-toggle="tooltip" data-placement="top" title="AngularJS" alt="AngularJS"/><img class="capabilityIcons" src="images/docker-icon.png" data-toggle="tooltip" data-placement="top" title="docker" alt="docker"/><img class="capabilityIcons" src="images/amazonIcon.png" data-toggle="tooltip" data-placement="top" title="Amazon Web Services" alt="Amazon Web Services"/>
            	</div>
             <div class="cardFooter">
-              <div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><button class="cardButton" data-toggle="modal" data-target="#modalDetailsSS">READ MORE</button>
+              <div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><button class="cardButton" data-toggle="modal" data-target="#modalDetailsFPDS">READ MORE</button>
             </div>
           </div>
           <!--Card End-->
